bk_ida/gccida/g3/if_then_else_cond
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7648:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7666:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7668:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v27; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7669:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v28; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7679:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7679:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7687:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v46; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7690:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v49; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7692:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v51; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7693:4: error: expected ';' after expression
rtx v52; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7693:5: error: use of undeclared identifier 'v52'
rtx v52; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7694:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v53; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7700:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7700:5: error: use of undeclared identifier 'v59'
rtx v59; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7701:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7701:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7704:4: error: expected ';' after expression
rtx v63; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7704:5: error: use of undeclared identifier 'v63'
rtx v63; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/combine.c:7705:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v64; // edi 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/if_then_else_cond/src/obj/combine.o] Error 1
